--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,25 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-top: 94px;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+.icon-wrapper:hover {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.features-icon {
+  align-self: center;
+  width: 70px;
+  height: 70px;
+}
 .features-list {
   display: flex;
 }
@@ -145,7 +164,6 @@
   margin-right: 30px;
 }
 .features-list li {
-  padding-top: 94px;
   padding-bottom: 94px;
 }
 .features .features-title {
