--- a/css/main.css
+++ b/css/main.css
@@ -60,20 +60,18 @@
 .header .header-contact:focus {
   color: var(--blue-accent);
 }
-.nav-contacts li:hover,
-.nav-contacts li:focus {
-  fill: var(--blue-accent);
-}
+
 .header .header-list.current {
   color: var(--blue-accent);
 }
 .envelope {
   margin-right: 10px;
-  /* fill: var(--grey-cnt); */
+  fill: currentColor;
 }
 
 .smartphone {
   margin-right: 10px;
+  fill: currentColor;
 }
 
 .header .header-contact {
@@ -212,13 +210,17 @@
 }
 .team-list .item {
   margin-top: 50px;
+  margin-bottom: 94px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-list .team-name {
   margin-top: 30px;
   margin-bottom: 10px;
 }
 .team-list .team-text {
-  padding-bottom: 124px;
+  margin-bottom: 16px;
 }
 
 .team-list .item + .item {
@@ -244,8 +246,33 @@
   line-height: 1.2;
   color: var(--grey-cnt);
 }
-
-/* footer */
+.team-icons {
+  display: inline-flex;
+  margin-right: auto;
+  margin-left: auto;
+}
+.team-icons li {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.team-icons li:not(:last-child) {
+  margin-right: 10px;
+}
+.team-icons li:hover {
+  background-color: var(--blue-accent);
+  border-radius: 50%;
+}
+.team-icons .soc-icon:hover {
+  fill: var(--white-primary);
+}
+.soc-icon {
+  fill: #afb1b8;
+}
+/* Footer */
 
 .footer {
   background-color: var(--background-color);
