--- a/css/main.css
+++ b/css/main.css
@@ -379,3 +379,44 @@
 .footer .footer-link:focus {
   color: var(--blue-accent);
 }
+.footer-cnt {
+  display: inline-flex;
+  align-items: baseline;
+}
+
+.footer-soc {
+  margin-left: 70px;
+}
+
+.footer-soc h2 {
+  font-weight: 700;
+  line-height: 1.14px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--white-primary);
+}
+.footer-icon {
+  fill: var(--white-primary);
+}
+.soc-list {
+  margin-top: 20px;
+  display: inline-flex;
+}
+.soc-list a {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.soc-list li + li {
+  margin-left: 10px;
+}
+.soc-list li:hover,
+.soc-list li:focus {
+  background: var(--blue-accent);
+  border-radius: 50%;
+}
