--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -110,11 +110,22 @@
   background-color: var(--btn-bg);
   color: var(--black-secondary);
 }
-.hero .hero-button:hover,
-.hero .hero-buton:focus {
+.hero .hero-button:hover {
   background-color: var(--blue-accent);
   color: var(--white-primary);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
 }
+.hero .hero-button:focus {
+  background-color: var(--blue-accent);
+  color: var(--white-primary);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  outline: none;
+}
+
 .hero-items {
   flex-wrap: wrap;
 }
@@ -131,6 +142,11 @@
 
 .hero-items .item:nth-child(3n) {
   margin-right: 0px;
+}
+.hero-items .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 .card-content {
   padding: 20px 24px;
@@ -229,8 +245,9 @@
 .soc-list li + li {
   margin-left: 10px;
 }
-.soc-list li:hover,
-.soc-list li:focus {
+.soc-list a:hover,
+.soc-list a:focus {
   background: var(--blue-accent);
   border-radius: 50%;
+  outline: none;
 }
